SC#UNIONVMS-525 Create initial Java model based on xsd schema
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@3252 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -54,7 +54,7 @@
                             <schemaDirectory>${project.basedir}/src/main/resources/contract</schemaDirectory>
                             <bindingDirectory>${project.basedir}/src/main/resources/contract</bindingDirectory>
 
-                            <generateDirectory>${project.basedir}/target/generated-sources/xjc</generateDirectory>
+                            <generateDirectory>${basedir}/src/main/java/</generateDirectory>
 
                             <extension>true</extension>
                             <args>
