--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,12 @@
                 <version>${postgres.jdbc.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>18.0</version>
+            </dependency>
+
             <!-- TEST -->
             <dependency>
                 <groupId>junit</groupId>
