--- a/service/pom.xml
+++ b/service/pom.xml
@@ -127,9 +127,14 @@
             <artifactId>arquillian-junit-container</artifactId>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>org.jboss.shrinkwrap.resolver</groupId>-->
+            <!--<artifactId>shrinkwrap-resolver-depchain</artifactId>-->
+        <!--</dependency>-->
+
         <dependency>
-            <groupId>org.jboss.shrinkwrap.resolver</groupId>
-            <artifactId>shrinkwrap-resolver-depchain</artifactId>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
         </dependency>
 
         <dependency>
@@ -174,6 +179,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ejb-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <ejbVersion>3.1</ejbVersion>
+                </configuration>
             </plugin>
             <!--  <plugin>
                 <groupId>org.codehaus.mojo</groupId>
