--- a/service/pom.xml
+++ b/service/pom.xml
@@ -115,9 +115,15 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.arquillian.core</groupId>
-            <artifactId>arquillian-core-api</artifactId>
-            <version>1.1.4.Final</version>
+            <groupId>org.unitils</groupId>
+            <artifactId>unitils-mock</artifactId>
+            <version>3.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.unitils</groupId>
+            <artifactId>unitils-inject</artifactId>
+            <version>3.4.2</version>
             <scope>test</scope>
         </dependency>
 
