--- a/pom.xml
+++ b/pom.xml
@@ -123,15 +123,13 @@
                 <scope>provided</scope>
             </dependency>
 
-            <!-- Hibernate provided by WildFly -->
-
-          <!--  <dependency>
+            <!-- Hibernate Spatial -->
+            <dependency>
                 <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-core</artifactId>
-                <version>${hibernate.version}</version>
-                <scope>provided</scope>
+                <artifactId>hibernate-spatial</artifactId>
+                <version>4.0</version>
             </dependency>
--->
+
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
@@ -321,6 +319,23 @@
             </plugin>
         </plugins>
     </build>
+
+    <!-- add repositories for JTS and Hibernate Spatial and Hibernate (JBoss) -->
+    <repositories>
+        <repository>
+            <id>OSGEO GeoTools repo</id>
+            <url>http://download.osgeo.org/webdav/geotools</url>
+        </repository>
+        <repository>
+            <id>Hibernate Spatial repo</id>
+            <url>http://www.hibernatespatial.org/repository</url>
+        </repository>
+        <!-- add JBOSS repository for easy access to Hibernate libraries -->
+        <repository>
+            <id>JBOSS</id>
+            <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
 
     <modules>
         <module>rest</module>
