--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,8 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-spatial</artifactId>
-                <version>4.0</version>
+                <version>4.3</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
