--- a/service/pom.xml
+++ b/service/pom.xml
@@ -148,6 +148,11 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.unitils</groupId>
             <artifactId>unitils-inject</artifactId>
             <version>3.4.2</version>
