--- a/service/pom.xml
+++ b/service/pom.xml
@@ -128,6 +128,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-transaction-jta</artifactId>
+            <version>1.0.0.Alpha3</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
             <version>2.2.0-beta-2</version>
@@ -189,6 +195,19 @@
                 <version>2.3</version>
                 <configuration>
                     <ejbVersion>3.1</ejbVersion>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.1.6</version>
+                <configuration>
+                    <targetClasses>
+                        <param>eu.europa.ec.fisheries.uvms.spatial.service.mapper.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>eu.europa.ec.fisheries.uvms.spatial.service.mapper.*</param>
+                    </targetTests>
                 </configuration>
             </plugin>
         </plugins>
