--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rest</artifactId>
     <name>${project.parent.artifactId}-rest</name>
@@ -10,9 +11,9 @@
         <artifactId>spatial</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    
+
     <dependencies>
-        
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>model</artifactId>
@@ -54,7 +55,7 @@
         </dependency>
 
     </dependencies>
-        
+
     <build>
         <finalName>${project.name}-${project.version}</finalName>
         <plugins>
@@ -77,7 +78,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <!-- USE following command to run this profile: mvn clean install -P generate-rest-doc -Dhostname=127.0.0.1 -Dport=8080  -->
     <profiles>
         <profile>
@@ -103,7 +104,8 @@
                                     <useStandardDocletOptions>false</useStandardDocletOptions>
                                     <additionalparam>-apiVersion ${project.version}
                                         -docBasePath http://${hostname}:${port}/${project.parent.artifactId}/apidocs
-                                        -apiBasePath http://${hostname}:${port}/${project.parent.artifactId}/rest</additionalparam>
+                                        -apiBasePath http://${hostname}:${port}/${project.parent.artifactId}/rest
+                                    </additionalparam>
                                 </configuration>
                                 <goals>
                                     <goal>javadoc</goal>
@@ -113,7 +115,7 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>        
-    </profiles> 
+        </profile>
+    </profiles>
 
 </project>
