Excluding jconsole artifact from wildfly to resolve eclipse build error
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@3663 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -163,6 +163,12 @@
             <artifactId>wildfly-arquillian-container-remote</artifactId>
             <version>1.0.0.Alpha5</version>
             <scope>test</scope>
+            <exclusions>
+		      <exclusion>
+		        <groupId>sun.jdk</groupId>
+		        <artifactId>jconsole</artifactId>
+		      </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
