Updating the wildfly plugin to delete EAR before deploy
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@3819 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -84,6 +84,26 @@
                         <groupId>org.wildfly.plugins</groupId>
                         <artifactId>wildfly-maven-plugin</artifactId>
                         <version>1.0.2.Final</version>
+                        <executions>
+                            <!-- Undeploy the application on clean -->
+		                    <execution>
+		                        <id>undeploy</id>
+		                        <phase>clean</phase>
+		                        <goals>
+		                            <goal>undeploy</goal>
+		                        </goals>
+		                        <configuration>
+		                            <ignoreMissingDeployment>true</ignoreMissingDeployment>
+		                        </configuration>
+                    		</execution>
+                    		<execution>
+		                        <id>deploy</id>
+		                        <phase>install</phase>
+		                        <goals>
+		                            <goal>deploy</goal>
+		                        </goals>
+                    		</execution>
+                        </executions>
                         <configuration>
                             <filename>${project.build.finalName}.${project.packaging}</filename>
                             <targetDir>${project.build.directory}</targetDir>
