Updating the wildfly plugin to delete EAR before deploy
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@3820 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -74,7 +74,7 @@
         </dependency>
     </dependencies>
 
-    <!-- USE following command to run this profile: mvn clean install -P wildfly-deploy wildfly:deploy -Dhostname=127.0.0.1 -Dport=9990 -Dusername=admin -Dpassword=asdf  -->
+    <!-- USE following command to run this profile: mvn clean install -P wildfly-deploy wildfly:deploy -Dhostname=127.0.0.1 -Dport=9990 -Dusername=wildfly -Dpassword=password  -->
     <profiles>
         <profile>
             <id>wildfly-deploy</id>
