--- a/service/pom.xml
+++ b/service/pom.xml
@@ -188,7 +188,9 @@
     </dependencies>
 
     <build>
+    
         <finalName>${project.name}-${project.version}</finalName>
+
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -203,6 +205,13 @@
                     <exclude>**/usmDeploymentDescriptor.xml</exclude>
                 </excludes>
             </resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>**/logback.xml</include>
+				</includes>
+			</resource>
         </resources>
         <plugins>
             <plugin>
@@ -217,7 +226,7 @@
                     <ejbVersion>3.1</ejbVersion>
                 </configuration>
             </plugin>
-            <plugin>
+<!--             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>properties-maven-plugin</artifactId>
                 <version>1.0-alpha-2</version>
@@ -232,7 +241,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin> -->
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
