Add java serializable interface to all generated classes Extension that makes "collection like" properties name plural. I.e: attribute => attributes
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@4397 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -69,9 +69,18 @@
 
                             <schemaLanguage>XMLSCHEMA</schemaLanguage>
                             <forceRegenerate>false</forceRegenerate>
+                            <!-- Default to the schemaDirectory -->
+                            <bindingDirectory>${project.basedir}/src/main/resources</bindingDirectory>
+                            <bindingIncludes>
+                                <include>**/*.xjb</include>
+                            </bindingIncludes>
+                            <!-- By default, nothing is excluded. -->
+                            <bindingExcludes>
+                                <include>**/*.xj</include>
+                            </bindingExcludes>
 
                             <schemaDirectory>${project.basedir}/src/main/resources/contract</schemaDirectory>
-                            <bindingDirectory>${project.basedir}/src/main/resources/contract</bindingDirectory>
+
 
                             <generateDirectory>${basedir}/src/main/java/</generateDirectory>
 
