--- a/model/pom.xml
+++ b/model/pom.xml
@@ -23,26 +23,19 @@
         </dependency>
 
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms</groupId>
+            <artifactId>uvms-commons</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.jvnet.jaxb2_commons</groupId>
-            <artifactId>jaxb2-basics-runtime</artifactId>
-            <version>0.9.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.geotools</groupId>
-            <artifactId>gt-geojson</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-        </dependency>
-
 
     </dependencies>
 
@@ -66,7 +59,6 @@
                         </executions>
 
                         <configuration>
-
                             <schemaLanguage>XMLSCHEMA</schemaLanguage>
                             <forceRegenerate>false</forceRegenerate>
                             <!-- Default to the schemaDirectory -->
@@ -80,57 +72,9 @@
                             </bindingExcludes>
 
                             <schemaDirectory>${project.basedir}/src/main/resources/contract</schemaDirectory>
-
-
+                            <bindingDirectory>${project.basedir}/src/main/resources/contract</bindingDirectory>
                             <generateDirectory>${basedir}/src/main/java/</generateDirectory>
-
-                            <extension>true</extension>
-                            <args>
-                                <arg>-Xequals</arg>
-                                <arg>-XhashCode</arg>
-                                <arg>-XtoString</arg>
-                                <arg>-Xsetters</arg>
-                                <arg>-Xvalue-constructor</arg>
-                                <arg>-Xsetters-mode=direct</arg>
-                                <arg>-Xannotate</arg>
-                            </args>
-
-                            <plugins>
-                                <plugin>
-                                    <groupId>org.jvnet.jaxb2_commons</groupId>
-                                    <artifactId>jaxb2-basics</artifactId>
-                                    <version>0.9.4</version>
-                                </plugin>
-                                <plugin>
-                                    <groupId>org.jvnet.jaxb2_commons</groupId>
-                                    <artifactId>jaxb2-value-constructor</artifactId>
-                                    <version>3.0</version>
-                                </plugin>
-                                <plugin>
-                                    <groupId>org.jvnet.jaxb2_commons</groupId>
-                                    <artifactId>jaxb2-basics-annotate</artifactId>
-                                    <version>1.0.1</version>
-                                </plugin>
-                                <plugin>
-                                    <groupId>org.jvnet.jaxb2_commons</groupId>
-                                    <artifactId>jaxb2-annotate-plugin-test-annox-annotations</artifactId>
-                                    <version>1.0.0</version>
-                                </plugin>
-                            </plugins>
                         </configuration>
-
-                        <dependencies>
-                            <dependency>
-                                <groupId>com.fasterxml.jackson.core</groupId>
-                                <artifactId>jackson-annotations</artifactId>
-                                <version>${jackson.version}</version>
-                            </dependency>
-                            <dependency>
-                                <groupId>com.fasterxml.jackson.core</groupId>
-                                <artifactId>jackson-databind</artifactId>
-                                <version>${jackson.version}</version>
-                            </dependency>
-                        </dependencies>
 
                     </plugin>
                 </plugins>
