--- a/service/pom.xml
+++ b/service/pom.xml
@@ -24,7 +24,7 @@
             <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
             <artifactId>movement-model</artifactId>
         </dependency>
-
+        
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.vessel</groupId>
             <artifactId>vessel-model</artifactId>
@@ -135,7 +135,7 @@
             <artifactId>fest-assert</artifactId>
         </dependency>
 
-        <dependency>
+ 		<dependency>
             <groupId>org.jboss.arquillian</groupId>
             <artifactId>arquillian-bom</artifactId>
             <type>pom</type>
@@ -144,12 +144,6 @@
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jboss.arquillian.extension</groupId>
-            <artifactId>arquillian-transaction-jta</artifactId>
-            <version>1.0.0.Alpha3</version>
         </dependency>
 
         <dependency>
@@ -162,7 +156,6 @@
         <dependency>
             <groupId>org.wildfly.arquillian</groupId>
             <artifactId>wildfly-arquillian-container-remote</artifactId>
-            <version>1.0.0.Alpha5</version>
             <scope>test</scope>
             <exclusions>
 		      <exclusion>
@@ -171,6 +164,34 @@
 		      </exclusion>
             </exclusions>
         </dependency>
+        
+        <dependency>
+		  <groupId>org.jboss.arquillian.extension</groupId>
+		  <artifactId>arquillian-rest-warp-impl-resteasy</artifactId>
+		  <version>1.0.0.Alpha3</version>
+		  <scope>test</scope>
+		</dependency>
+	
+		<dependency>
+		  <groupId>org.jboss.arquillian.extension</groupId>
+		  <artifactId>arquillian-rest-client-api</artifactId>
+		  <version>1.0.0.Alpha3</version>
+		  <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-rest-client-impl-3x</artifactId>
+            <version>1.0.0.Alpha3</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+			<groupId>org.jboss.arquillian.extension</groupId>
+			<artifactId>arquillian-transaction-impl-base</artifactId>
+			<version>1.0.1.Final</version>
+			<scope>test</scope>
+		</dependency>
 
         <dependency>
             <groupId>org.unitils</groupId>
@@ -219,6 +240,15 @@
 			</resource>
         </resources>
         <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/*ITest.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
